@@ -4,6 +4,7 @@
 	* Record new url when page/record is renamed
 	* Get rid of 'FE' option during extension installation
 	* Update index on urllog table to search for urls faster
+	* Get rid of old flexform options
 
 25-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
 
